# fatefun

./: .env.devnet.example  .env.example  .env.mainnet.example  .gitignore  ARCHITECTURE.md  Anchor.toml  COUNCIL_UI_SUMMARY.md  DEPLOYMENT_STATUS.md  DEVELOPER_REFERENCE.md  DIRECTORY_STRUCTURE.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_STRUCTURE.md  GAME_LAYOUT.md  MODDIO_ENHANCED.md  MODDIO_INTEGRATION.md  PROFILE_LEADERBOARD_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  REALTIME_INTEGRATION.md  REALTIME_SUMMARY.md  TESTING.md  TESTING_WORKFLOW.md  package-lock.json  package.json  scripts-commands.json  tsconfig.json
app/: .env.example  ANCHOR_VERSION_CRITICAL.md  ANCHOR_VERSION_FIX.md  next.config.js  package.json  tailwind.config.js
game/: README.md  (+2 more)
programs/fate-protocol/programs/fate_arena/: Cargo.toml  INSTRUCTIONS.md
programs/fate-protocol/programs/fate_arena/src/: constants.rs  errors.rs  lib.rs
programs/fate-protocol/programs/fate_arena/src/instructions/: cancel_match.rs  claim_winnings.rs  create_market.rs  create_match.rs  initialize.rs  initialize_config.rs  join_match.rs  mod.rs  resolve_match.rs  start_match.rs  submit_prediction.rs  update_stats.rs  update_user_profile.rs
programs/fate-protocol/programs/fate_arena/src/state/: arena.rs  match_account.rs  mod.rs  player.rs  prediction.rs
programs/fate-protocol/programs/fate_arena/src/utils/: math.rs  mod.rs  pyth.rs  validation.rs
programs/fate-protocol/programs/fate_council/: Cargo.toml
programs/fate-protocol/programs/fate_council/src/: constants.rs  errors.rs  lib.rs
programs/fate-protocol/programs/fate_council/src/instructions/: cancel_proposal.rs  cast_vote.rs  claim_vote_tokens.rs  create_proposal.rs  execute_proposal.rs  initialize_council.rs  mod.rs  resolve_proposal.rs
programs/fate-protocol/programs/fate_council/src/state/: council.rs  mod.rs  proposal.rs  vote.rs
(+106 files in other folders)
