[package]
name = "fate-arena"
version = "1.0.0"
description = "FATE Arena - PvP Prediction Battles Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fate_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-sdk-solana = "0.10"
borsh = "0.10.3"
