[package]
name = "fate-council"
version = "1.0.0"
description = "FATE Council - Community Governance and Futarchy Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fate_council"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
borsh = "0.10.3"
