[package]
name = "fate-council"
version = "1.0.0"
description = "FATE Council - Community Governance and Futarchy Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fate_council"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
borsh = "0.10.3"
